# moore-machines

./: moore-machines.cabal
test/: Main.hs
